@@ -8,6 +8,7 @@ import views.europresse
 import views.wordreplace
 import views.uncapitalise
 import views.qpmap
+import views.scopus
 
 class MainView(tk.Toplevel):
     def __init__(self, parent):
@@ -17,14 +18,8 @@ class MainView(tk.Toplevel):
         self.protocol('WM_DELETE_WINDOW', self.
                       parent.destroy)
 
-        #views.listtxt.ViewListTxt(self)
-        #views.cleaning.ViewCleaning(self)
-        #views.filter.ViewFilter(self)
-        #views.qp.ViewQP(self)
-        #views.europresse.ViewEuropresse(self)
         #views.wordreplace.ViewReplacer(self)
-        views.uncapitalise.ViewReplacer(self)
-        #views.qpmap.ViewPaster(self)
+        #views.uncapitalise.ViewReplacer(self)
 
 if __name__ == '__main__':
     root = tk.Tk()
